--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,5 +1,53 @@
-.env*
-.venv
-/stock_data
+# Python cache files
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
+*.py[cod]
+
+# Virtual environments
+.venv/
+venv/
+env/
+ENV/
+
+# Environment variables
+.env
+.env.*
+
+# Data folders
+/stock_data/
+
+# Logs
+*.log
+logs/
+*.out
+*.err
+
+# IDE/editor files
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
+
+# Bytecode and cache for tests
+.pytest_cache/
+.coverage
+.tox/
+.mypy_cache/
+.cache/
+
+# Bytecode and cache for tests
+.pytest_cache/
+.coverage
+.tox/
+.mypy_cache/
+.cache/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# FastAPI / Uvicorn / Gunicorn temp files
+*.pid
+*.sock
