--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,6 +19,8 @@ dependencies = [
     "supabase>=2.18.1",
     "uvicorn>=0.35.0",
     "starlette>=0.27.0",
+    "yfinance>=0.2.18",
+    "websockets>=12.0",
 ]
 
 [tool.setuptools.packages.find]
