--- a/QuantEase/package.json
+++ b/QuantEase/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.0",
     "reactflow": "^11.11.4",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
     "uuid": "^13.0.0",
